rename maw_solr_indexer role

--- a/roles/maw_solr_indexer/meta/argument_specs.yml
+++ b/roles/maw_solr_indexer/meta/argument_specs.yml
@@ -3,37 +3,42 @@ argument_specs:
   main:
     short_description: Role to configure a systemd service and timer to run the solr indexer process
     options:
-      solr_idx__systemd_dir:
+      maw_solridx__systemd_dir:
         type: str
         required: true
         description: the directory where to write the systemd service and timer files
 
-      solr_idx__service:
+      maw_solridx__service:
         type: str
         required: true
         description: the name of the service
 
-      solr_idx__pod:
+      maw_solridx__pod:
         type: str
         required: true
         description: the name of the pod in which to run the reverse geocode service
 
-      solr_idx__image:
+      maw_solridx__image:
         type: str
         required: true
         description: the name of docker image for the reverse geocode process
 
-      solr_idx__sql_username:
+      maw_solridx__container:
+        type: str
+        required: true
+        description: the name to use for the running container
+
+      maw_solridx__sql_username:
         type: str
         required: true
         description: the username to use when connecting to the maw_website postgres database
 
-      solr_idx__sql_password:
+      maw_solridx__sql_password:
         type: str
         required: true
         description: the password to use when connecting to the maw_website postgres database
 
-      solr_idx__calendar:
+      maw_solridx__calendar:
         type: str
         required: true
         description: the systemd calendar specification to define when this job runs
