--- a/inventories/group_vars/maw_prod.yml
+++ b/inventories/group_vars/maw_prod.yml
@@ -95,17 +95,21 @@ maw_redis__cache_sync_sql_password: "{{ maw__sql_password }}"
 
 # maw solr settings
 maw_solr__version: 8
-maw_solr__systemd_dir: "{{ maw__systemd_dir }}"
 maw_solr__tempdir: "{{ remote_home_dir }}/_tmp_ansible_maw_solr"
 maw_solr__pod: "{{ maw__podman_pod }}"
 maw_solr__image: "docker.io/solr:{{ maw_solr__version }}"
 maw_solr__container: "{{ maw__env }}-maw-solr"
 maw_solr__volume: "{{ maw__env }}-maw-solr-{{ maw__version_solr }}"
-maw_solr__indexer_image: docker.io/aerisg222/maw-solr-indexer:latest
-maw_solr__indexer_container: "{{ maw__env }}-solr-indexer"
-maw_solr__indexer_sql_username: "{{ maw__sql_solr_username }}"
-maw_solr__indexer_sql_password: "{{ maw__sql_solr_password }}"
-maw_solr__indexer_calendar: '00:50:00'
+
+# maw solr indexer
+maw_solridx__pod: "{{ maw__podman_pod }}"
+maw_solridx__image: docker.io/aerisg222/maw-solr-indexer:latest
+maw_solridx__container: "{{ maw__env }}-solr-indexer"
+maw_solridx__sql_username: "{{ maw__sql_solr_username }}"
+maw_solridx__sql_password: "{{ maw__sql_solr_password }}"
+maw_solridx__systemd_dir: "{{ maw__systemd_dir }}"
+maw_solridx__service: "{{ maw_solridx__container }}"
+maw_solridx__calendar: '00:50:00'
 
 # maw api settings
 maw_api__pod: "{{ maw__podman_pod }}"
