--- a/roles/maw_solr/tasks/main.yml
+++ b/roles/maw_solr/tasks/main.yml
@@ -26,15 +26,7 @@
 
 - name: Configure Solr Indexer
   ansible.builtin.include_role:
-    name: solr_indexer
-  vars:
-    solr_idx__systemd_dir: "{{ maw_solr__systemd_dir }}"
-    solr_idx__service: "{{ maw_solr__indexer_container }}"
-    solr_idx__pod: "{{ maw_solr__pod }}"
-    solr_idx__image: "{{ maw_solr__indexer_image }}"
-    solr_idx__sql_username: "{{ maw_solr__indexer_sql_username }}"
-    solr_idx__sql_password: "{{ maw_solr__indexer_sql_password }}"
-    solr_idx__calendar: "{{ maw_solr__indexer_calendar }}"
+    name: maw_solr_indexer
 
 - name: run indexer
   ansible.builtin.systemd:
