--- a/roles/postgres_restore_roles/tasks/set_role_password.yml
+++ b/roles/postgres_restore_roles/tasks/set_role_password.yml
@@ -1,9 +1,9 @@
 - name: set role password
   containers.podman.podman_container:
-    name: "{{ maw__env }}-maw-pginit-role-password"
-    pod: "{{ maw__podman_pod }}"
-    image: "{{ maw__podman_image_postgres }}"
-    env_file: "{{ maw__podman_env_dir }}/maw-postgres.env"
+    name: "{{ pg_res_role__temp_container }}"
+    pod: "{{ pg_res_role__pod }}"
+    image: "{{ pg_res_role__image }}"
+    env_file: "{{ pg_res_role__envfile }}"
     interactive: true
     state: started
     command:
@@ -15,13 +15,13 @@
       - '-d'
       - postgres
       - '-c'
-      - "ALTER ROLE {{ item.username }} WITH PASSWORD '{{ item.password }}';"
+      - "ALTER ROLE {{ _pg_res_role__role_info.username }} WITH PASSWORD '{{ _pg_res_role__role_info.password }}';"
 
 - name: wait for set role container to stop
   ansible.builtin.include_role:
     name: podman_wait_for_stop
   vars:
-    pod_stop__container_name: "{{ maw__env }}-maw-pginit-role-password"
+    pod_stop__container_name: "{{ pg_res_role__temp_container }}"
     pod_stop__result_varname: role_pwd_result
 
 - name: fail if password not set
