--- a/inventories/group_vars/maw_dev.yml
+++ b/inventories/group_vars/maw_dev.yml
@@ -49,8 +49,6 @@ maw__asset_dir_movies: "{{ asset_dir_root }}/movies"
 
 maw__podman_pod: dev-maw-pod
 maw__podman_env_dir: "{{ remote_maw_root }}/podman-env"
-maw__podman_image_photos: ""
-maw__podman_image_files: ""
 maw__podman_image_gateway: ""
 maw__podman_image_maw_certs: docker.io/aerisg222/maw-certs:latest
 maw__podman_image_certbot: docker.io/certbot/certbot:latest
@@ -225,6 +223,18 @@ maw_www__google_recaptcha_site_key: "{{ vault_google_recaptcha_site_key }}"
 maw_www__google_recaptcha_secret_key: "{{ vault_google_recaptcha_secret_key }}"
 maw_www__asset_dir_images: "{{ maw__asset_dir_images }}"
 maw_www__asset_dir_movies: "{{ maw__asset_dir_movies }}"
+
+# maw files
+maw_files__pod:
+maw_files__image:
+maw_files__container:
+maw_files__cert_volume:
+
+# maw photos
+maw_photos__pod:
+maw_photos__image:
+maw_photos__container:
+maw_photos__cert_volume:
 
 # maw reverse geocode
 maw_revgeo__systemd_dir:
