--- a/inventories/group_vars/maw_prod.yml
+++ b/inventories/group_vars/maw_prod.yml
@@ -61,8 +61,6 @@ maw__podman_image_postgres: docker.io/postgres:14-alpine
 
 maw__podman_pod: prod-maw-pod
 maw__podman_env_dir: "{{ remote_maw_root }}/podman-env"
-maw__podman_image_photos: docker.io/aerisg222/maw-photos:latest
-maw__podman_image_files: docker.io/aerisg222/maw-files:latest
 maw__podman_image_gateway: docker.io/aerisg222/maw-gateway:latest
 maw__podman_image_maw_certs: docker.io/aerisg222/maw-certs:latest
 maw__podman_image_certbot: docker.io/certbot/certbot:latest
@@ -237,6 +235,18 @@ maw_www__google_recaptcha_site_key: "{{ vault_google_recaptcha_site_key }}"
 maw_www__google_recaptcha_secret_key: "{{ vault_google_recaptcha_secret_key }}"
 maw_www__asset_dir_images: "{{ maw__asset_dir_images }}"
 maw_www__asset_dir_movies: "{{ maw__asset_dir_movies }}"
+
+# maw files
+maw_files__pod: "{{ maw__podman_pod }}"
+maw_files__image: docker.io/aerisg222/maw-files:latest
+maw_files__container: "{{ maw__env }}-maw-files"
+maw_files__cert_volume: "{{ maw__certs_volume }}"
+
+# maw photos
+maw_photos__pod: "{{ maw__podman_pod }}"
+maw_photos__image: docker.io/aerisg222/maw-photos:latest
+maw_photos__container: "{{ maw__env }}-maw-photos"
+maw_photos__cert_volume: "{{ maw__certs_volume }}"
 
 # maw reverse geocode
 maw_revgeo__systemd_dir: "{{ maw__systemd_dir }}"
