--- a/inventories/group_vars/maw_test.yml
+++ b/inventories/group_vars/maw_test.yml
@@ -58,8 +58,6 @@ maw__podman_image_postgres: "docker.io/postgres:{{ maw__version_postgres }}-alpi
 
 maw__podman_pod: test-maw-pod
 maw__podman_env_dir: "{{ remote_maw_root }}/podman-env"
-maw__podman_image_photos: localhost/maw-photos-test
-maw__podman_image_files: localhost/maw-files-test
 maw__podman_image_gateway: localhost/maw-gateway-test
 maw__podman_image_maw_certs: docker.io/aerisg222/maw-certs:latest
 maw__podman_image_certbot: ""
@@ -161,7 +159,7 @@ maw_solridx__calendar: '00:50:00'
 
 # maw api settings
 maw_api__pod: "{{ maw__podman_pod }}"
-maw_api__image: "localhost/maw-api-test"
+maw_api__image: localhost/maw-api-test
 maw_api__container: "{{ maw__env }}-maw-api"
 maw_api__cert_dir: ""
 maw_api__cert_volume: "{{ maw__certs_volume }}"
@@ -182,7 +180,7 @@ maw_api__asset_dir_images: "{{ maw__asset_dir_images }}"
 
 # maw auth settings
 maw_auth__pod: "{{ maw__podman_pod }}"
-maw_auth__image: "localhost/maw-auth-test"
+maw_auth__image: localhost/maw-auth-test
 maw_auth__container: "{{ maw__env }}-maw-auth"
 maw_auth__cert_dir: ""
 maw_auth__cert_volume: "{{ maw__certs_volume }}"
@@ -211,7 +209,7 @@ maw_auth__pfx_signing: "{{ maw__pfx_signing }}"
 
 # maw www settings
 maw_www__pod: "{{ maw__podman_pod }}"
-maw_www__image: "localhost/maw-www-test"
+maw_www__image: localhost/maw-www-test
 maw_www__container: "{{ maw__env }}-maw-www"
 maw_www__cert_dir: ""
 maw_www__cert_volume: "{{ maw__certs_volume }}"
@@ -233,6 +231,18 @@ maw_www__google_recaptcha_site_key: "{{ vault_google_recaptcha_site_key }}"
 maw_www__google_recaptcha_secret_key: "{{ vault_google_recaptcha_secret_key }}"
 maw_www__asset_dir_images: "{{ maw__asset_dir_images }}"
 maw_www__asset_dir_movies: "{{ maw__asset_dir_movies }}"
+
+# maw files
+maw_files__pod: "{{ maw__podman_pod }}"
+maw_files__image: localhost/maw-files-test
+maw_files__container: "{{ maw__env }}-maw-files"
+maw_files__cert_volume: "{{ maw__certs_volume }}"
+
+# maw photos
+maw_photos__pod: "{{ maw__podman_pod }}"
+maw_photos__image: localhost/maw-photos-test
+maw_photos__container: "{{ maw__env }}-maw-photos"
+maw_photos__cert_volume: "{{ maw__certs_volume }}"
 
 # maw reverse geocode
 maw_revgeo__systemd_dir: "{{ maw__systemd_dir }}"
