--- a/inventories/group_vars/maw_dev.yml
+++ b/inventories/group_vars/maw_dev.yml
@@ -49,7 +49,6 @@ maw__asset_dir_movies: "{{ asset_dir_root }}/movies"
 
 maw__podman_pod: dev-maw-pod
 maw__podman_env_dir: "{{ remote_maw_root }}/podman-env"
-maw__podman_image_certbot: docker.io/certbot/certbot:latest
 maw__podman_image_reverse_geocode: ""
 maw__podman_publish_ports:
   - 8983:8983  # solr
@@ -235,15 +234,19 @@ maw_photos__container:
 maw_photos__cert_volume:
 
 # maw gateway
+maw_gateway__asset_dir:
 maw_gateway__pod:
 maw_gateway__image:
 maw_gateway__container:
 maw_gateway__cert_volume:
+maw_gateway__certbot_systemd_dir: "{{ maw__systemd_dir }}"
+maw_gateway__certbot_service: "{{ maw__env }}-maw-certs"
+maw_gateway__certbot_image:
 maw_gateway__certbot_certs_volume:
 maw_gateway__certbot_certs_volume_to_migrate:
 maw_gateway__certbot_validation_volume:
 maw_gateway__certbot_validation_volume_to_migrate:
-maw_gateway__asset_dir:
+maw_gateway__certbot_calendar: '0/12:00:00'
 
 # maw reverse geocode
 maw_revgeo__systemd_dir:
