--- a/roles/maw_postgres/tasks/main.yml
+++ b/roles/maw_postgres/tasks/main.yml
@@ -27,8 +27,11 @@
 
 - name: prepare postgres initialization volume
   ansible.builtin.include_tasks:
-    file:
-      - init_volume.yml
+    file: init_volume.yml
+
+- name: prepare gdrive credentials volume
+  ansible.builtin.include_tasks:
+    file: gdrive_volume.yml
 
 - name: maw-postgres container
   containers.podman.podman_container:
