--- a/roles/mikeandwan_us/tasks/main.yml
+++ b/roles/mikeandwan_us/tasks/main.yml
@@ -26,19 +26,7 @@
     apply:
       become: true
       become_user: "{{ maw__username }}"
-  vars:
-    maw_as__dir: "{{ remote_maw_root }}/admin_scripts"
-    maw_as__do_backup: "{{ maw__env == 'prod' }}"
-    maw_as__pod: "{{ maw__podman_pod }}"
-    maw_as__postgres_envfile: "{{ maw__podman_env_dir }}/maw-postgres.env"
-    maw_as__postgres_image: "{{ maw__podman_image_postgres }}"
-    maw_as__certbot_image: "{{ maw__podman_image_certbot }}"
-    maw_as__gdrive_image: "{{ maw__podman_image_gdrive }}"
-    maw_as__cache_sync_image: "{{ maw__podman_image_cache_sync }}"
-    maw_as__maw_certs_image: "{{ maw__podman_image_maw_certs }}"
-    maw_as__reverse_geocode_image: "{{ maw__podman_image_reverse_geocode }}"
-    maw_as__solr_indexer: "{{ maw__podman_image_solr_indexer }}"
-  when: ansible_connection != 'local'
+  when: maw_as__deploy
 
 - name: Initialize self signed certificates
   ansible.builtin.include_tasks:
