--- a/inventories/group_vars/maw_test.yml
+++ b/inventories/group_vars/maw_test.yml
@@ -62,7 +62,21 @@ maw__sql_password_solr: "{{ vault_password_sql_solr }}"
 # google api key (maps / reverse geocode)
 maw__google_api_key: "{{ vault_google_api_key }}"
 
-# shared google creds volume
+# maw host settings
+maw_host__hostnames:
+  - "{{ maw__fqdn_naked }}"
+  - "{{ maw__fqdn_api }}"
+  - "{{ maw__fqdn_auth }}"
+  - "{{ maw__fqdn_files }}"
+  - "{{ maw__fqdn_photos }}"
+  - "{{ maw__fqdn_www }}"
+maw_host__asset_dirs:
+  - "{{ maw__asset_dir_images }}"
+  - "{{ maw__asset_dir_movies }}"
+maw_host__allow_low_ports: false
+maw_host__deploy_admin_scripts: false
+
+# maw shared google creds volume
 maw_google_creds__backup_dir: "{{ controller_maw_env_root }}/google-creds"
 maw_google_creds__backup_file: "{{ controller_maw_env_root }}/google-creds/www_emailer.json"
 maw_google_creds__volume: "{{ maw__env }}-maw-google-creds"
