update argspecs for google creds

--- a/roles/maw_google_credentials/meta/argument_specs.yml
+++ b/roles/maw_google_credentials/meta/argument_specs.yml
@@ -3,3 +3,27 @@ argument_specs:
   main:
     short_description: Creates shared google creds volume to hold email credentials file for mikeandwan.us
     options:
+      maw_google_creds__backup_dir:
+        type: str
+        required: true
+        description: backup directory on controller containing the credentials file
+
+      maw_google_creds__backup_file:
+        type: str
+        required: true
+        description: google credentials backup file on controller
+
+      maw_google_creds__volume:
+        type: str
+        required: true
+        description: volume that will hold the credentials file
+
+      maw_google_creds__volume_to_migrate:
+        type: str
+        required: true
+        description: name of the original volume holding the google credentials file
+
+      maw_google_creds__file:
+        type: str
+        required: true
+        description: path to the google credentials file for the running application
